--- a/index.html
+++ b/index.html
@@ -183,7 +183,7 @@
                                     </a>
                                 </li>
                                 <li class="social-icons__item">
-                                    <a href="" class="social-icons__linkv" target="_blank" rel="noopener noreferrer">
+                                    <a href="" class="social-icons__link" target="_blank" rel="noopener noreferrer">
                                         <svg class="social-icons__svg" width="20" height="20">
                                             <use href="./images/icons.svg#icon-linkedin"></use>
                                         </svg>
@@ -367,7 +367,7 @@
                 <form>
                     <input type="email" name="mail" id="mail" autocomplete="off" placeholder="E-mail"
                         class="dark-fone__input">
-                    <button type="submit" class="dark-fone__submit">Подписаться <svg class="footer-submit-icon" width="24"
+                    <button type="submit" class="dark-fone__submit">Подписаться <svg class="dark-fone__submit-icon" width="24"
                             height="24">
                             <use href="./images/icons.svg#icon-icon-send"></use>
                         </svg></button>
