--- a/portfolio.html
+++ b/portfolio.html
@@ -241,7 +241,7 @@
                 <form>
                     <input type="email" name="mail" id="mail" autocomplete="off" placeholder="E-mail"
                         class="dark-fone__input">
-                    <button type="submit" class="dark-fone__submit">Подписаться <svg class="footer-submit-icon" width="24"
+                    <button type="submit" class="dark-fone__submit">Подписаться <svg class="dark-fone__submit-icon" width="24"
                             height="24">
                             <use href="./images/icons.svg#icon-icon-send"></use>
                         </svg></button>
